--- a/_collections/_pages/index.html
+++ b/_collections/_pages/index.html
@@ -1,8 +1,9 @@
 ---
+layout: home
 title: Home | Netlify Test Site
 description: This is the homepage.
 keywords: home
-layout: home
 ---
-
 <h1>Hello world!</h1>
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut faucibus tincidunt dictum. Vestibulum eget arcu id metus convallis laoreet quis id libero. Proin non bibendum justo. Mauris et est egestas, efficitur dui ac, consequat eros. Quisque maximus mi in sem aliquam feugiat at non felis. Quisque quis mollis arcu. Pellentesque magna turpis, feugiat id faucibus sit amet, lobortis at mi. Sed eleifend ut tortor non volutpat. Aliquam erat volutpat. Integer vel quam venenatis, lacinia lectus in, consectetur magna. Aliquam erat volutpat. Maecenas egestas at purus eu suscipit. Sed id sapien lacinia, elementum magna at, rhoncus massa. Proin placerat et magna iaculis pulvinar. Ut maximus purus metus, ut fermentum massa tristique pulvinar. Fusce dolor magna, posuere ut feugiat at, lacinia a nibh.
